- fix bug #50953, socket will not connect to IPv4 address when the host has both ipv4 and ipv6 addresses